Change Notes
=============

2010-05-12 FLI
	- DimensionEditor and MappingEditor now allows "Mass Insert" of dimensions and mappings
	- Added "Auto Assign" feature during insert, mainly for Mass Insert to automatically find a matching dimension element.
	
2010-05-10 FLI
	- CSVLoader is now able to write the output file directly into a ZIP archive.
	- Added 'ei' package for further use. Not yet integrated...
	
2010-05-07 RPF
	- CSVLoader uses "Target Column Names" now, if there are some specified

2010-05-05 jbornema
	- CubeHandler support new property <pool key>.datapool.syncTables.connection.shared for shared connections
	- JDBCExtractor logs debug of the sql statement
	- MoveFileFinalizer implements IJobFinalizer so the move can take place if the entire job executed without errors
	- ETLProcess skips records also for the transformers that have the skipped flag right away from the extractor
	- Job chainScriptName changed to a List - with addChainScriptName multiple chains can be used in the job script
	- JDBCUtil property <connection key>.connection.transactionIsolation added to support JDBC transaction isolation levels
	- DimensionMappingTransformer supports shared connections

2010-04-26 jbornema
	- XLSExtractor uses now poi 3.6 with support of Excel 2007
	- ETLProcess supports dynamic adding of Sources during Process execution

2010-04-08 RPF
	- Added fall back in XLSTool while getting values from numeric formular cells to avoid exception and job stop

2010-03-26 jbornema
	- DataPoolInitializerUtil.ensureCube(String key, List<String> dimKeys, List<String> measureKeys, IDataPool.CubeType cubeType, List<String> ignoreDimKeys) added
	  dimension keys in ignoreDimKeys do not trigger a cube replace if missing

2010-03-01 jbornema
	- CubeLoader.processRecord processes null values as well
	- DimensionMappingTransformer.createDimensionElement(IDimensionElement, String),
	  called by doMapping(IProcessContext, IRecord, String) added 