@@ -1044,6 +1044,8 @@ de.xwic.etlgine/server/web/img/database_lightning.png -text
 de.xwic.etlgine/server/web/img/database_save.png -text
 de.xwic.etlgine/server/web/img/door_out.png -text
 de.xwic.etlgine/server/web/img/headerfade4.png -text
+de.xwic.etlgine/server/web/img/lock.png -text
+de.xwic.etlgine/server/web/img/lock_open.png -text
 de.xwic.etlgine/server/web/img/page_excel.png -text
 de.xwic.etlgine/server/web/img/pencil.png -text
 de.xwic.etlgine/server/web/img/report.png -text
