@@ -1,6 +1,9 @@
 Change Notes
 =============
 
+2010-05-14 FLI
+	- Added possibility to seal/unseal a dimension
+	
 2010-05-12 FLI
 	- DimensionEditor and MappingEditor now allows "Mass Insert" of dimensions and mappings
 	- Added "Auto Assign" feature during insert, mainly for Mass Insert to automatically find a matching dimension element.
